--- a/templates/cart.html
+++ b/templates/cart.html
@@ -51,7 +51,7 @@
 
         <div class="text-end">
             <h4>Subtotal: $<span id="cart-subtotal">{{ cart|sum(attribute='price') }}</span></h4>
-            <button class="btn btn-primary btn-lg mt-3">Checkout</button>
+            <button id="checkout-button" class="btn btn-primary btn-lg mt-3">Checkout</button>
         </div>
         {% else %}
         <p>Your cart is empty. <a href="/">Continue shopping</a>.</p>
@@ -75,6 +75,25 @@
             </div>
         </div>
     </footer>
+    <script src="https://js.stripe.com/v3/"></script>
+<script>
+    const stripe = Stripe('pk_live_51PlH81BOHbUs2dyDZjsdejpfqKACWMjg63DCa8DzSngORsWeifZC82vnGX7RQ8eunN3WwntVd1xTs25DEPUU20AK00ZNBsr7dS'); 
+
+    document.getElementById('checkout-button').addEventListener('click', function () {
+        fetch('/checkout-session', {
+            method: 'POST',
+        })
+        .then(response => response.json())
+        .then(session => {
+            if (session.error) {
+                alert(session.error); // Handle any errors
+            } else {
+                return stripe.redirectToCheckout({ sessionId: session.id });
+            }
+        })
+        .catch(error => console.error('Error:', error));
+    });
+</script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{{ url_for('static', filename='cart.js') }}"></script>
